cluster-resources/gateway-referencegrant.yaml
---
# ReferenceGrant to allow HTTPRoutes from any namespace to reference the Gateway in kube-system
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: gateway-reference
  namespace: kube-system
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: tools
  to:
    - group: gateway.networking.k8s.io
      kind: Gateway
---
# ReferenceGrant to allow HTTPRoutes to reference Services in the tools namespace
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: gateway-to-services
  namespace: tools
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: kube-system
  to:
    - group: ""
      kind: Service
