cluster-resources/envoy-gateway.yaml
---
# Gateway for Envoy Gateway in Internal Cluster
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway
  namespace: kube-system
  annotations:
    # Use NodePort to expose the gateway
    gateway.envoyproxy.io/service-type: NodePort
spec:
  gatewayClassName: envoy
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
  infrastructure:
    annotations:
      # Specify NodePort for consistent port allocation
      service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "false"
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: custom-proxy-config
